tests/rosetta/transpiler/Zig/call-a-function-12.error
zig build: exit status 1
/tmp/call-a-function-12.zig:29:28: error: expected type 'i32', found 'fn (i32) i32'
